* Add otl format plugin, which handles files as created by vimoutliner.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ ikiwiki (1.21) UNRELEASED; urgency=low
   * Implemented better cycle detection in the inline plugin; nested inlines
     will now work.
   * Add a map plugin contributed by Alessandro Dotti Contra.
+  * Add otl format plugin, which handles files as created by vimoutliner.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 12:10:37 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 17:27:38 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
