--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -1,6 +1,6 @@
 If this plugin is enabled, then a sidebar is added to pages in the wiki.
 The content of the sidebar is simply the content of a page named
-"sidebar".
+"sidebar" (ie, create a "sidebar.mdwn").
 
 Typically this will be a page in the root of the wiki, but it can also be a
 [[SubPage]]. In fact, this page, [[plugins/sidebar|plugins/sidebar]], will
