* Fix ikiwiki-mass-rebuild to work in the way the postinst uses it.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ ikiwiki (1.21) UNRELEASED; urgency=low
     will now work.
   * Add a map plugin contributed by Alessandro Dotti Contra.
   * Add otl format plugin, which handles files as created by vimoutliner.
+  * Fix ikiwiki-mass-rebuild to work in the way the postinst uses it.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 17:27:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 22:54:08 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
