--- a/doc/ikiwiki-mass-rebuild.mdwn
+++ b/doc/ikiwiki-mass-rebuild.mdwn
@@ -16,10 +16,7 @@ user /path/to/wiki
 
 # OPTIONS
 
-* -refresh
-
-  Rather than rebuilding all the wikis, just build any changed pages
-  (including pages inherited from the basewiki).
+All options are passed on to ikiwiki.
 
 # AUTHOR
 
