* Add first draft at a Restructured Text (rst) plugin, by Sergio   Talens-Oliag. Note that this has many known issues -- see the caveats on   the plugin's page. * Credit everyone who wrote a plugin on the plugins' wiki pages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,12 @@ ikiwiki (1.21) UNRELEASED; urgency=low
   * Add a map plugin contributed by Alessandro Dotti Contra.
   * Add otl format plugin, which handles files as created by vimoutliner.
   * Fix ikiwiki-mass-rebuild to work in the way the postinst uses it.
+  * Add first draft at a Restructured Text (rst) plugin, by Sergio
+    Talens-Oliag. Note that this has many known issues -- see the caveats on
+    the plugin's page.
+  * Credit everyone who wrote a plugin on the plugins' wiki pages.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 18 Aug 2006 22:54:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 19 Aug 2006 00:56:32 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
