--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -3,5 +3,6 @@ emitted by ikiwiki. Besides being nicely formatted, this helps ensure that
 even if users enter suboptimal html, your wiki generates valid html.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+It was contributed by Faidon Liambotis.
 
 [[tag type/html]]
