--- a/doc/plugins/map.mdwn
+++ b/doc/plugins/map.mdwn
@@ -9,6 +9,7 @@ Hint: To limit the map to displaying pages less than a certian level deep,
 use a [[PageSpec]] like this: `pages="* and !*/*/*"`
 
 This plugin is included in ikiwiki, but is not enabled by default.
+It was contributed by Alessandro Dotti Contra.
 
 If this plugin is enabled, here is a page map for the plugins section
 of this wiki:
