--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -11,5 +11,6 @@ And here's how to create a table of all the pages on the wiki:
 	\[[pagestats style="table"]]
 
 This plugin is included in ikiwiki, but is not enabled by default.
+It was contributed by Enrico Zini
 
 [[tag type/meta type/tags]]
