--- a/doc/plugins/polygen.mdwn
+++ b/doc/plugins/polygen.mdwn
@@ -7,6 +7,7 @@ It's also possible to specify a starting nonterminal for the grammar by
 including `symbol="text"` in the directive.
 
 This plugin is included in ikiwiki, but not enabled by default.
+It was contributed by Enrico Zini.
 
 ----
 
