--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -12,5 +12,6 @@ you can create a sidebar page that is completely empty. This will turn off
 the sidebar altogether.
 
 This plugin is included in ikiwiki, but is not enabled by default.
+It was contributed by Tuomo Valkonen.
 
 [[tag type/chrome]]
