--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -25,6 +25,6 @@ Released 29 April 2006.
   quickly grow to support them all.. See [[about_rcs_backends]]
   _(status: supports git in tree)_
 * Support for one other markup language, probably restructured text.
-  _(status: done, but need a few more in tree)_
+  _(status: done, but the rst plugin needs improvement)_
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
