--- a/doc/todo/spell_check_plug-in.mdwn
+++ b/doc/todo/spell_check_plug-in.mdwn
@@ -2,4 +2,4 @@ A speel chek plug-in woold be fantaztik.  Anyone working on this?
 
 ----
 
-Knot as fair ass eye no --[[Joey]]
+Knot adz fair ass eye no --[[Joey]]
