--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -13,7 +13,7 @@ Released 29 April 2006.
 # 2.0
 
 * Unit test suite (with tests of at least core stuff like
-  [[PageSpec]]). (status: exists, could of course use more tests)
+  [[PageSpec]]). _(status: exists, could of course use more tests)_
 * [[Plugins]] _(status: done, interface still not quite stable)_
 * [[Tags]] _(status: fair)_
 * Should have fully working [[todo/utf8]] support. _(status: fair)_
