--- a/doc/todo/pageindexes.mdwn
+++ b/doc/todo/pageindexes.mdwn
@@ -1,3 +1,3 @@
 Might be nice to support automatically generating an index based on headers
-in a page, for long pages. The question is, how to turn on such an index?
-Well, make it a [[plugin]] enabled by a [[preprocessordirective]].
+in a page, for long pages. This could be done as a sanitize hook that
+parsed the html, with a preprocessordirective that controlled it.
