* Fix utf-8 in blog post form.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,9 @@ ikiwiki (1.21) UNRELEASED; urgency=low
     Talens-Oliag. Note that this has many known issues -- see the caveats on
     the plugin's page.
   * Credit everyone who wrote a plugin on the plugins' wiki pages.
+  * Fix utf-8 in blog post form.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 19 Aug 2006 00:56:32 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Aug 2006 16:40:51 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
