--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.21) UNRELEASED; urgency=low
+ikiwiki (1.21) unstable; urgency=low
 
   * Add a tail fin^W^Wsidebar plugin by Tuomo Valkonen.
   * If a page links to itself, mark up the link text in a span with
@@ -18,7 +18,7 @@ ikiwiki (1.21) UNRELEASED; urgency=low
   * Credit everyone who wrote a plugin on the plugins' wiki pages.
   * Fix utf-8 in blog post form.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 20 Aug 2006 16:40:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Aug 2006 16:42:54 -0400
 
 ikiwiki (1.20) unstable; urgency=low
 
