--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -16,7 +16,7 @@ Released 29 April 2006.
   [[PageSpec]]). _(status: exists, could of course use more tests)_
 * [[Plugins]] _(status: done, interface still not quite stable)_
 * [[Tags]] _(status: fair)_
-* Should have fully working [[todo/utf8]] support. _(status: fair)_
+* Should have fully working [[todo/utf8]] support. _(status: good)_
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
   scalability issues. _(status: 45%-60%+ speedup since 1.0)_
 * Improved [[todo/html]] stylesheets and templates.
