--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -26,7 +26,7 @@ Some of ikiwiki's features:
   by ikiwiki. Markdown understands text formatted as it would be in an email,
   and is quite smart about converting it to html. The only additional markup
   provided by ikiwiki on top of regular markdown is the [[WikiLink]] and 
-  [[PreprocessorDirective]]
+  [[PreprocessorDirective]].
 
   If you prefer to use some other markup language, ikiwiki allows others to
   easily be added by [[plugins]]. For example it also supports traditional
