--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -55,7 +55,7 @@ Some of ikiwiki's features:
   Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
   of some of the flexible ways that this can be used.
 
-  Ikiwiki can also [[plugin/aggregate]] external blogs, feeding them into
+  Ikiwiki can also [[plugins/aggregate]] external blogs, feeding them into
   the wiki. This can be used to create a Planet type site that aggregates
   interesting feeds.
 
