--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -1,20 +1,12 @@
-Seems like there should be a page for you to post your thoughts about ikiwiki, both pro and con, anything that didn't work, ideas, or whatever. Do so here..
+Seems like there should be a page for you to post your thoughts about
+ikiwiki, both pro and con, anything that didn't work, ideas, or whatever.
+Do so here..
 
-Note that for more formal bug reports or todo items, you can also edit the [[bugs]] and  [[todo]] pages.
+Note that for more formal bug reports or todo items, you can also edit the
+[[bugs]] and  [[todo]] pages.
 
-----
-How about adding ACL? So that you can control which users are allowed to read, write certain pages. The moinmoin wiki has that, and it is something, that I think is very valuable. 
+---- 
 
-----
-It would be interesting to have a `<TMPL_VAR BASEURL>` that would act exactly like the current `STYLEURL`, but without adding 'style.css' (`STYLEURL` could be defined in terms of `BASEURL`). This way it would be possible to have more flexible templates allowing multiple stylesheets, shortcut icons (and other images), etc.
-
-	sub baseurl (;$) { #{{{
-		my $page=shift;
-
-		return "$config{url}/" if ! defined $page;
-		
-		$page=~s/[^\/]+$//;
-		$page=~s/[^\/]+\//..\//g;
-		return $page;
-	} #}}}
-
+How about adding ACL? So that you can control which users are allowed
+to read, write certain pages. The moinmoin wiki has that, and it is
+something, that I think is very valuable. 
