* Clean up behavior with broken parentlinks.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     STYLEURL and add BASEURL to all templates (some already had it). This
     new more general variable can be used to link to other things (eg, images)
     from the template, as well as stylesheets.
+  * Clean up behavior with broken parentlinks.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 21 Aug 2006 18:16:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 21 Aug 2006 18:26:28 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
