--- a/doc/bugs/broken_parentlinks.mdwn
+++ b/doc/bugs/broken_parentlinks.mdwn
@@ -5,3 +5,5 @@ that superpages weren't mandatory.
 For example, if you are in 'example/page.html', the header will be something
 like 'wiki / example / page'. Now, if 'example.html' doesn't exist, you'll have
 a dead link for every subpage.
+
+[[todo/done]]
