--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     new more general variable can be used to link to other things (eg, images)
     from the template, as well as stylesheets.
   * Clean up behavior with broken parentlinks.
+  * Fix a bug introduced last version to do with nested inlines.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 21 Aug 2006 18:26:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Aug 2006 12:53:05 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
