--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -8,8 +8,8 @@ Instead it can use [[Subversion]] (or [[Git]]).
   It's the best way to find out when there's a new version to [[Download]].
 
 * See [[Features]] for a list of ikiwiki's features. [[RoadMap]], [[TODO]]
-  and [[bugs]] might also be of interest. Feel free to post your thoughts
-  about ikiwiki to [[Discussion]].
+  and [[bugs]] might also be of interest. Feel free to post your questions
+  and thoughts about ikiwiki to [[Discussion]].
 
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
   the parameters and usage of the ikiwiki program. If you use ikiwiki,
