--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -3,10 +3,20 @@ ikiwiki, both pro and con, anything that didn't work, ideas, or whatever.
 Do so here..
 
 Note that for more formal bug reports or todo items, you can also edit the
-[[bugs]] and  [[todo]] pages.
+[[bugs]] and [[todo]] pages.
 
 ---- 
+
+# ACL
 
 How about adding ACL? So that you can control which users are allowed
 to read, write certain pages. The moinmoin wiki has that, and it is
 something, that I think is very valuable. 
+
+> ikiwiki currently has only the most rudimentary access controls: pages
+> can be locked, or unlocked and only the admin can edit locked pages. That
+> could certianly be expanded on, although it's not an area that I have an
+> overwhelming desire to work on myself right now. Patches appreciated and
+> I'll be happy to point you in the right directions.. --[[Joey]]
+
+----
