* Allow preprocessor directives to span multiple lines, both to make   long ones with lots of values easier to write, and to allow for ones with   multi-line quoted values.

--- a/basewiki/preprocessordirective.mdwn
+++ b/basewiki/preprocessordirective.mdwn
@@ -15,3 +15,16 @@ Note that if a preprocessor directive has no parameters, a space still must
 be put after its name, to avoid confusion with a [[WikiLink]]. For example:
 
 	\[[pagecount ]]
+
+A preprocessor directive does not need to all be on one line. Also,
+multiple lines of *quoted* text can be used for a value. Examples:
+
+	\[[directive foo="baldersnatch"
+	bar="supercalifragalisticexpealadocious" baz=11]]
+
+	\[[directive text="
+	1. foo
+	2. bar
+	3. baz
+	more lines
+	"]]
