--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -11,9 +11,12 @@ Instead it can use [[Subversion]] (or [[Git]]).
   and [[bugs]] might also be of interest. Feel free to post your questions
   and thoughts about ikiwiki to [[Discussion]].
 
+[[template type=note text="""
+If you use ikiwiki, please list your wiki in [[IkiWikiUsers]]. Thanks!
+"""]]
+
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
-  the parameters and usage of the ikiwiki program. If you use ikiwiki,
-  please add your wiki to [[IkiWikiUsers]].
+  the parameters and usage of the ikiwiki program.
 
 * [[Security]] lists potential security problems. ikiwiki is still being
   developed, and is being written with security as a priority, so don't
