--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -1,8 +1,8 @@
+[[template id=plugin name=camelcase included=1 author="""[[Joey]]"""]]
+
 This plugin makes words in CamelCase be treated as a [[WikiLink]]. That is
 to say, any two or more words capitalised and mashed together are assumed
 to be the name of some other page on the wiki, and so become a link.
-
-This plugin is included in ikiwiki, but is not enabled by default.
 
 If this plugin is enabled, here is a link: SandBox
 
