--- a/doc/plugins/htmltidy.mdwn
+++ b/doc/plugins/htmltidy.mdwn
@@ -1,8 +1,9 @@
+[[template id=plugin name=htmltidy included=1 author="""Faidon Liambotis"""]]
+[[tag type/html]]
+
 This plugin uses [tidy](http://tidy.sourceforge.net/) to tidy up the html
 emitted by ikiwiki. Besides being nicely formatted, this helps ensure that
 even if users enter suboptimal html, your wiki generates valid html.
 
-This plugin is included in ikiwiki, but is not enabled by default.
-It was contributed by Faidon Liambotis.
-
-[[tag type/html]]
+Note that since tidy is an external program, that is run each time a page
+is built, this plugin will slow ikiwiki down somewhat.
