--- a/doc/plugins/otl.mdwn
+++ b/doc/plugins/otl.mdwn
@@ -1,7 +1,6 @@
+[[template id=plugin name=otl included=1 author="""[[Joey]]"""]]
+[[tag type/format]]
+
 This plugin allows ikiwiki to process `.otl` outline files, as created by 
 [vimoutliner](http://www.vimoutliner.org/). To use it, you need to have 
 vimoutliner installed, since it uses the `otl2html` program.
-
-This plugin is included in ikiwiki, but is not enabled by default.
-
-[[tag type/format]]
