--- a/doc/plugins/pagecount.mdwn
+++ b/doc/plugins/pagecount.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=pagecount included=1 author="""[[Joey]]"""]]
+[[tag type/meta]]
+
 Provides a \\[[pagecount ]] [[PreProcessorDirective]] that is replaced with
 the total number of pages currently in the wiki.
 
@@ -9,5 +12,3 @@ This plugin is included in ikiwiki, but is not enabled by default.
 If it is turned on it can tell us that this wiki includes
 [[pagecount ]] pages, of which [[pagecount pages="*/Discussion"]] are
 discussion pages.
-
-[[tag type/meta]]
