--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=sidebar included=1 author="""Tuomo Valkonen"""]]
+[[tag type/chrome]]
+
 If this plugin is enabled, then a sidebar is added to pages in the wiki.
 The content of the sidebar is simply the content of a page named
 "sidebar" (ie, create a "sidebar.mdwn").
@@ -10,8 +13,3 @@ SubPages, if the plugin is enabled.
 Note that to disable a sidebar for a [[SubPage]] of a page that has a sidebar,
 you can create a sidebar page that is completely empty. This will turn off
 the sidebar altogether.
-
-This plugin is included in ikiwiki, but is not enabled by default.
-It was contributed by Tuomo Valkonen.
-
-[[tag type/chrome]]
