--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -1,4 +1,5 @@
-Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
+Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to
+add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
 
 # tarball
 
