--- a/doc/plugins/fortune.mdwn
+++ b/doc/plugins/fortune.mdwn
@@ -1,14 +1,13 @@
+[[template id=plugin name=fortune included=1 author="""[[Joey]]"""]]
+[[tag type/fun]]
+
 This just uses the `fortune` program to insert a fortune into the page.
 Usage:
 
 	\[[fortune ]]
-
-This plugin is included in ikiwiki, but not enabled by default.
 
 If this plugin is enabled, here's a fortune for you:
 
 ----
 
 [[fortune ]]
-
-[[tag type/fun]]
