--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=haiku included=1 author="""[[Joey]]"""]]
+[[tag type/fun]]
+
 This plugin allows inserting a randomly generated haiku into a wiki page.
 Just type:
 
@@ -10,11 +13,8 @@ what to write the haiku about. If no hint is given, it might base it on the
 page name. Since the vocabulary it knows is very small, many hints won't
 affect the result at all.
 
-This plugin is included in ikiwiki, but is not enabled by default. As a
-special bonus, enabling this plugin makes any error messages ikiwiki should
-display be written in haiku.
+As a special bonus, enabling this plugin makes any error messages ikiwiki
+should display be written in haiku.
 
 You need to have the Coy module installed for this plugin to do anything
 interesting. That does all the heavy lifting.
-
-[[tag type/fun]]
