--- a/doc/plugins/html.mdwn
+++ b/doc/plugins/html.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=html included=1 author="""[[Joey]]"""]]
+[[tag type/html type/format]]
+
 This plugin lets raw html pages be used as source pages for the wiki. The
 html pages will still be wrapped in the same html template as any other
 page, so for best results you should include only the page body in the html
@@ -6,5 +9,3 @@ sanitised like any other page. You can also use standard [[WikiLink]]s etc
 in the html pages.
 
 This plugin is included in ikiwiki, but is not enabled by default.
-
-[[tag type/html type/format]]
