--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -1,5 +1,8 @@
-This plugin, which is enabled by default, lets ikwiki convert files with
-names ending in ".mdwn" to html. It uses the [[markdown]] minimal markup
-language.
-
+[[template id=plugin name=mdwn core=1 included=1 author="""[[Joey]]"""]]
 [[tag type/format type/core]]
+
+This plugin lets ikwiki convert files with names ending in ".mdwn" to html.
+It uses the [[markdown]] minimal markup language.
+
+This is the standard markup language used by ikiwiki, although some others
+are also available in other plugins.
