--- a/doc/plugins/orphans.mdwn
+++ b/doc/plugins/orphans.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=orphans included=1 author="""[[Joey]]"""]]
+[[tag type/meta]]
+
 This plugin generates a list of possibly orphaned pages -- pages that no
 other page links to.
 
@@ -8,9 +11,6 @@ Note that it takes [[BackLinks]] into account, but does not count inlining a
 page as linking to it, so will generally count many blog-type pages as
 orphans.
 
-This plugin is included in ikiwiki, but is not enabled by default.
-If it is turned on, here's a list of orphaned pages on this wiki:
+If it is enabled, here's a list of orphaned pages on this wiki:
 
 [[orphans ]]
-
-[[tag type/meta]]
