--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=pagestate included=1 author="""Enrico Zini"""]]
+[[tag type/meta type/tags]]
+
 This plugin can generate stats about how pages link to each other. It can
 produce either a del.icio.us style cloud, or a table counting the number of
 links to each page.
@@ -9,8 +12,3 @@ Here's how to use it to create a [[tag]] cloud:
 And here's how to create a table of all the pages on the wiki:
 
 	\[[pagestats style="table"]]
-
-This plugin is included in ikiwiki, but is not enabled by default.
-It was contributed by Enrico Zini
-
-[[tag type/meta type/tags]]
