--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=rst included=1 author="""Sergio Talens-Oliag"""]]
+[[tag type/format]]
+
 This plugin lets ikwiki convert files with names ending in ".rst" to html.
 It uses the [reStructuredText](http://docutils.sourceforge.net/rst.html)
 markup syntax. You need to have the python-docutils module installed to use
@@ -17,8 +20,3 @@ ikiwiki. Limitations include:
 So while you may find this useful for importing old files into your wiki,
 using this as your main markup language in ikiwiki isn't recommended at
 this time.
-
-This plugin is included in ikiwiki, but not enabled by default.
-It was contributed by Sergio Talens-Oliag.
-
-[[tag type/format]]
