--- a/doc/plugins/search.mdwn
+++ b/doc/plugins/search.mdwn
@@ -1,8 +1,9 @@
+[[template id=plugin name=search included=1 author="""[[Joey]]"""]]
+[[tag type/useful]]
+
 This plugin is included in ikiwiki, but is not enabled by default. It adds
 full text search to ikiwiki, using the [[HyperEstraier]] engine.
 
 It's possible to configure HyperEstraier via one of ikiwiki's
 [[templates]], but for most users, no configuration should be needed aside
 from enabling the plugin.
-
-[[tag type/useful]]
