--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -1,3 +1,6 @@
+[[template id=plugin name=tag included=1 author="""[[Joey]]"""]]
+[[tag type/tags type/link]]
+
 This plugin allows tagging pages. List tags as follows:
 
 	\[[tag tech life linux]]
@@ -14,8 +17,5 @@ tags/tech, tags/life, and tags/linux. This is a useful way to avoid
 having to write the full path to tags, if you want to keep them grouped
 together out of the way.
 
-This plugin is included in ikiwiki, but is not enabled by default. If it is
-enabled, you'll see a note below that this page is tagged with the "tags"
-tag.
-
-[[tag type/tags type/link]]
+If this plugin is enabled, you'll see a note below that this page is tagged
+with the "tags" tag.
