--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -11,7 +11,7 @@ Instead it can use [[Subversion]] (or [[Git]]).
   and [[bugs]] might also be of interest. Feel free to post your questions
   and thoughts about ikiwiki to [[Discussion]].
 
-[[template type=note text="""
+[[template id=note text="""
 If you use ikiwiki, please list your wiki in [[IkiWikiUsers]]. Thanks!
 """]]
 
