--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -12,7 +12,8 @@ Instead it can use [[Subversion]] (or [[Git]]).
   and thoughts about ikiwiki to [[Discussion]].
 
 [[template id=note text="""
-If you use ikiwiki, please list your wiki in [[IkiWikiUsers]]. Thanks!
+If you use ikiwiki, please list your wiki in [[IkiWikiUsers]].
+Thanks! --[[Joey]]
 """]]
 
 * [[Setup]] has a tutorial for setting up ikiwiki, and [[Usage]] documents
