--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Add a template plugin.
   * Use the template plugin to add infoboxes to each plugin page listing basic
     info about the plugin.
+  * Make pagespec merge code smarter about merging duplicate pagespecs.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 22 Aug 2006 23:09:46 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 23 Aug 2006 02:38:34 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
