--- a/doc/plugins/contrib/linguas.mdwn
+++ b/doc/plugins/contrib/linguas.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=linguas author="""Jorda Polo"""]]
+[[template id=plugin name=linguas author="""Jordà Polo"""]]
 
 Linguas
 =======
@@ -53,6 +53,8 @@ fine, but it fails from ikiwiki.setup.)
 
   > My guess about this is that it's because of the way Setup/Standard.pm untaints the config items from the file. It has code to handle arrays, but not hashes or more complex data structures. --[[Joey]]
 
+  >  > Right. With this simple [patch](http://wiki.ettin.org/files/hash_setup.patch) it seems to work. However, note that 1) it only allows simple hashes, hashes of hashes will not work (I don't think getops can handle complex hashes anyway); 2) I don't really know when/why you call `possibly_foolish_untaint()`; and 3) I'm no perl guru ;). --Jordà
+
 * Wiki links to other translated pages require the full page name
 including the `.$LANG`. It should be possible to link automatically
 to pages with the same `.$LANG`, but that would probably require some
@@ -60,6 +62,9 @@ changes in IkiWiki. (I'm not sure though, I still haven't looked at
 it... any hints?)
 
   > Have you considered using the form ll/page? This would let more usual linking rules  apply amoung pages without needing to specify the language. I'm not sure if you're supporting browser content negotiation, or whether that other layout would be harder to support it though. --[[Joey]]
+
+  >  > Actually, I'm happy with the way it works now (and yeah, it is very easy to take advantage of content negotiation). I just wanted something simple to translatte a single page (or a few pages), not the entire wiki. I'm not even sure it is a good idea to have fully multilingual wikis, in most cases I would go for a different wiki for each language. That said, I think it is an interesting idea, so I'll take a look when I have the time. Thanks for your comments. --Jordà
+
 
 Examples
 --------
