* Patch from Jordà Polo to make Setup::Standard support hashes in config   files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,10 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Use the template plugin to add infoboxes to each plugin page listing basic
     info about the plugin.
   * Make pagespec merge code smarter about merging duplicate pagespecs.
+  * Patch from Jordà Polo to make Setup::Standard support hashes in config
+    files.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 23 Aug 2006 02:38:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 23 Aug 2006 14:35:18 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
