--- a/doc/plugins/template.mdwn
+++ b/doc/plugins/template.mdwn
@@ -9,15 +9,18 @@ and inserted into pages in the wiki. Using a template works like this:
 This fills out the template `templates/foo`, filling in the `color` and `age`
 fields on it with the specified values, and inserts the result into the page.
 
-If a value is triple-quoted, it can include any markup that would be
-allowed in the wiki page outside the template. Combined with multi-line
-quoted values, this allows for large chunks of marked up text to be
-embedded into a template:
+(Note that if the template doesn't exist, the page will provide a link that
+can be used to create it.)
+
+A value can include any markup that would be allowed in the wiki page
+outside the template. Triple-quoting the value even allows quotes to be
+included in it. Combined with multi-line quoted values, this allows for
+large chunks of marked up text to be embedded into a template:
 
 	\[[template id=foo name="Sally" color="green" age=8 notes="""
 	* \[[Charley]]'s sister.
+	* "I want to be an astronaut when I grow up."
 	* Really 8 and a half.
-	* Wants to be an astronaut when she grows up.
 	"""]]
 
 To create a template, make a page in the wiki named `template/foo`. Note
@@ -31,6 +34,8 @@ for the full syntax, but all you really need to know are a few things:
 * To insert the value of a variable, use `<TMPL_VAR variable>`.
 * To make a block of text conditional on a variable being set use
   `<TMPL_IF NAME="variable">text</TMPL_IF>`.
+* To use one block of text if a variable is set and a second if it's not,
+  use `<TMPL_IF NAME="variable">text<TMPL_ELSE>other text</TMPL_IF>`
 
 Here's a sample template:
 
